--- a/index.html
+++ b/index.html
@@ -1,100 +1,13 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
 
-	<head>
-		<html lang="ru">
-		<meta charset="utf-8">
-		<title>О переезде в Болгарию и жизни у Черного моря</title>					
-		<meta name="author" content "Дмитрий Уткин (Dima Luking)">
-		
-<!-- О чем эта страница. Эта инфа выдается поисковиками.  Для каждой страницы - пишем конкретное содержание страницы-->	
-		<meta name="description" content "Заметки из личного опыта о выборе страны для жизни на пенсии. Переезде в Болгарию. Оформлении визы Д, ВМЖ и ПМЖ Болгарии. 
-										О бизнесе в Болгарии. Как добраться на автомобиле в Болгарию и другие страны Европы. О жизни российских пенсионеров в Болгарии 
-										и вообще о жизни в странах на побережье Черного моря, и в Крыму">
-											
-<!-- Ключевые слова для поисковиков.-->	
-		<meta name="keywords" content "Болгария, Крым, переезд пенсионер, документы Болгария, недвижимость, виза Д Болгария, ВМЖ пенсионер Болгария, ПМЖ пенсионер Болгария">
+<head>
+    <meta http-equiv="Refresh" content="0; URL=http://zooopt72.azurewebsites.net/page.cshtml">
+						
+</head>
 
-		<link rel="stylesheet" href="styleDW.css">
-	</head> 
-	
-	<body>		
-		<div id="main_div">
-			<header>
-		<!-- шапка страницы 765 на 90  даю 90% ширину родительского блока. Высота подстраивается автоматом   !!! Добавь текст из description !!!-->
-				<a href="index.html"><img src="image/slogan4.png" alt="Знающий по Опыту. О жизни на берегах Черного моря" width=95%></a>
-			</header>
-		
-			<hr> 
-		
-			<nav class="navigation">
-				<ul>
-					<li><a href="#">Блог</a></li><!--
-					--><li><a href="#">Обо мне</a></li><!--
-					--><li><a href="#">Можем</a></li><!--
-					--><li><a href="#">Предложения друзей</a></li><!--
-					--><li><a href="index.html">На главную</a></li>
-				</ul>
-			</nav>
-			<br>
-		
-			<div class="group">
-		
-				<article class="head_art">
-			
-					<a href="s1.html">
-						<h3>Что нам стоит дом построить? Хочу к морю! <i>(Статья для журнала ТОР)</i> <time> 2016-03-28 </time></h3>
-					</a>	
-					<a href="s1.html">
-						<img class="head_article" src="image\s1_k1.jpg" alt="Дом в Алуште. Район Профессорский уголок. До пляжа 200м. Построен в 2016 г">
-					</a>
-					<p>	<i>Планируем переезд к Черному морю.  
-						Особенности	строительства  дома в прибрежных, горных, сейсмоопасных раонах. Личный опыт строительства. На что обратить внимание 
-						при покупке приморской недвижимости в Крыму, Болгарии. Покупка через местных агентов по продаже недвижимости, нечестные
-						приемы местных агентов и агентств. Особенности оформления документов на недвижимость в Крыму и Болгарии. Плюсы и минусы 
-						переезда российского пенсионера в Крым, Краснодарский край, Болгарию...</i> 
-						<br><br>
-						Лет восемь назад стал ловить себя на мысли: хочу к морю. 
-						Чуть позже понял точно: тянет туда где потеплее, особенно сильно ранней весной, после нашей долгой сибирской зимы.
-						Ближе к пенсии эта мысль поселилась в голове. Тут еще товарищи мои один за другим: «купил землю в Геленджике»,
-						«я переезжаю в Крым», «беру квартиру в Болгарии, буду там все лето»… . Моего возраста люди. И у меня свободное время появилось. Вот начинаешь думать,
-						точно перееду к морю!  .....
-					</p>
-					<a href="s1.html">Читать далее</a>
-				</article>
-				<br>
-			
-				<article class="head_art">
-			
-					<h3>Оформляем визу Д. Часть 2.Готовим документы. <time> 2016-03-26 </time></h3>
-					<img class="head_article" src="k1.jpg" alt="Оформляем визу 'Д' Татьяна в консульстве Болгарии">
-					<p>Эта статты для переезда в Болгарию. Все начиналось так м еезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось та
-					как мы оформляли документыеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось та
-					....да в Болгарию. Все начиналось таее
-					</p>
-					<a href="#top">Читать далее</a>
-				</article>		
-				<br>
-			
-				<article class="head_art">
-			
-					<h3>Оформляем визу Д. Часть 3.Подача документов в консульство. <time> 2016-03-20 </time></h3>
-					<img class="head_article" src="k1.jpg" alt="Оформляем визу 'Д' Татьяна в консульстве Болгарии">
-					<p>Эта статты для переезда в Болгарию. Все начиналось так м еезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось та
-					как мы оформляли документыеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось таеезда в Болгарию. Все начиналось та
-					....ачинало
-					</p>
-					<a href="#top">Читать далее</a>
-				</article>
-				<br>
-			<div>
-			
-			<br>
-		<div>
-		<footer>
-			© 2016  <b> Знающий по Опыту&DW_Luking </b>  Email: dw_luking@mail.ru  <a href="mailto:dw_luking@mail.ru?subject=Сайт%20Знающий%20По%20Опыту">Email Me</a>
-		</footer>
-		
-	</body> 
-	
+
+<body>
+</body>
+
 </html>
-
